<resources>
    <string name="app_name">Workout Log</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Workout Log</string>
    <string name="nav_header_subtitle">Track your workouts</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="menu_workouts">Workouts</string>
    <string name="menu_results">Results</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_prs">Personal records</string>
    <string name="menu_licenses">Licenses</string>
    <string name="menu_send">Send</string>
    <string name="message_saved_workout">Saved workout</string>
    <string name="message_added_workout_result">Added workout result</string>
    <string name="caption_workout_overview">Workout overview</string>
    <string name="caption_workout_results">Workout results</string>
    <string name="caption_add_workout">Add workout</string>
    <string name="caption_add_result">Add workout result</string>
    <string name="date">Date</string>
    <string name="workout_details">Workout details</string>
    <string name="result_details">Result details</string>
    <string name="hint_score_time">Score or time</string>
    <string name="hint_notes">Notes for workout (optional)</string>
    <string name="hint_feeling">Feelings regarding the workout (optional)</string>
    <string name="abbreviation_pr">PR</string>
    <string name="delete">Delete</string>
    <string name="undo">Undo</string>
    <string name="menu_edit_workout">Edit</string>
    <string name="caption_edit_workout">Edit workout</string>
    <string name="caption_edit_result">Edit result</string>
    <string name="day_streak">Day streak</string>
    <plurals name="quantity_monthly_workouts">
        <item quantity="one">day worked out this month</item>
        <item quantity="other">days worked out this month</item>
    </plurals>
    <plurals name="quantity_yearly_workouts">
        <item quantity="one">day worked out this year</item>
        <item quantity="other">days worked out this year</item>
    </plurals>
    <plurals name="quantity_rest_days">
        <item quantity="one">rest day</item>
        <item quantity="other">rest days - come on!</item>
    </plurals>
    <string name="caption_statistic_overview">Statistics</string>
    <string name="menu_statistics">Statistics</string>
    <string name="success_deleted_workout">Workout deleted</string>
    <string name="success_deleted_result">Result deleted</string>
    <string name="message_saved_changes_success">Successfully saved changes</string>
    <string name="caption_enter_workout">Enter your workout</string>
    <string name="menu_random_workout">Random workout</string>
    <string name="menu_random_workout_favorite">Random favorite workout</string>
    <string name="error_no_workout_favorite">No favorite workout stored</string>
    <string name="caption_search_filter">Search and filter</string>
    <string name="hint_search_workout">Search for workout</string>
    <string name="caption_active_filters">Active filters</string>

</resources>
