<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_workout"
                android:icon="@drawable/workout"
                android:title="@string/menu_workouts"/>
        <item
                android:id="@+id/nav_statistic"
                android:icon="@drawable/result"
                android:title="@string/menu_statistics"/>
        <item
                android:id="@+id/nav_favorite"
                android:icon="@drawable/favorite"
                android:title="@string/menu_favorites"/>
        <item
                android:id="@+id/nav_personalrecord"
                android:icon="@drawable/personalrecord"
                android:title="@string/menu_prs"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_send"/>
        </menu>
    </item>

</menu>
