<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheet"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        tools:context=".MainActivity"
        >

    <TextView
            android:id="@+id/textViewCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/caption_search_filter"
            style="@style/ImportantText"
            />

    <LinearLayout
            android:id="@+id/linearLayoutFeeling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/textViewCaption"
            app:layout_constraintLeft_toLeftOf="parent"
            >

        <ImageView
                android:layout_width="@dimen/imagebutton_size"
                android:layout_height="@dimen/imagebutton_size"
                android:layout_margin="@dimen/default_margin"
                android:src="@drawable/search"
                android:tint="@color/colorAccent"
                android:layout_gravity="center"
                />

        <EditText
                android:id="@+id/editTextSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_gravity="center"
                android:hint="@string/hint_search_workout"
                style="@style/StandardText"
                />

    </LinearLayout>

    <CheckBox
            android:id="@+id/checkBoxOnlyFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Only favorite"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutFeeling"
            app:layout_constraintLeft_toLeftOf="parent"
            />

    <ImageButton
            android:layout_width="@dimen/imagebutton_size"
            android:layout_height="@dimen/imagebutton_size"
            android:background="@drawable/search"
            android:backgroundTint="@color/colorAccent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutFeeling"
            app:layout_constraintRight_toRightOf="parent"
            />


    <TextView
            android:id="@+id/textViewCaptionActiveFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/checkBoxOnlyFavorite"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/caption_active_filters"
            style="@style/ImportantText"
            />

    <HorizontalScrollView
            android:id="@+id/scrollViewChips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewCaptionActiveFilter"
            app:layout_constraintLeft_toLeftOf="parent"
            >

        <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupActiveFilters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                app:singleLine="true"/>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>