<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
        >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
            >

            <LinearLayout
                    android:id="@+id/linearLayoutDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
            >

                <ImageView
                        android:layout_width="@dimen/imagebutton_size"
                        android:layout_height="@dimen/imagebutton_size"
                        android:layout_margin="@dimen/default_margin"
                        android:src="@drawable/calendar"
                        android:tint="@color/colorAccent"
                        android:layout_gravity="center"

                />

                <TextView
                        android:id="@+id/textViewDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="30.07.2019"
                        android:layout_gravity="center"
                        style="@style/ImportantText"
                        android:layout_weight="1"
                />

                <TextView
                        android:id="@+id/textViewPr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/abbreviation_pr"
                        android:layout_gravity="center"
                        style="@style/StandardText"
                />

                <ImageButton
                        android:id="@+id/imagebuttonPr"
                        android:layout_width="@dimen/imagebutton_size"
                        android:layout_height="@dimen/imagebutton_size"
                        android:src="@drawable/star"
                        android:tint="@color/gray"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:layout_gravity="center_vertical|right"
                        android:layout_margin="@dimen/default_margin"


                />

            </LinearLayout>

            <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGray"
                    app:layout_constraintTop_toBottomOf="@id/linearLayoutDate"
            />


            <LinearLayout
                    android:id="@+id/linearLayoutScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider1"
            >

                <ImageView
                        android:layout_width="@dimen/imagebutton_size"
                        android:layout_height="@dimen/imagebutton_size"
                        android:layout_margin="@dimen/default_margin"
                        android:src="@drawable/workout"
                        android:tint="@color/colorAccent"
                        android:layout_gravity="center"
                />

                <EditText
                        android:id="@+id/editTextContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minLines="10"
                        android:layout_gravity="center"
                        style="@style/StandardText"
                        android:hint="@string/hint_score_time"
                />

            </LinearLayout>

            <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGray"
                    app:layout_constraintTop_toBottomOf="@id/linearLayoutScore"
            />

            <LinearLayout
                    android:id="@+id/linearLayoutNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider2"
            >

                <ImageView
                        android:layout_width="@dimen/imagebutton_size"
                        android:layout_height="@dimen/imagebutton_size"
                        android:layout_margin="@dimen/default_margin"
                        android:src="@drawable/info"
                        android:tint="@color/colorAccent"
                        android:layout_gravity="center"
                />

                <EditText
                        android:id="@+id/editTextNote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minLines="3"
                        android:hint="@string/hint_notes"
                        android:layout_gravity="center"
                        style="@style/StandardText"
                />

            </LinearLayout>

            <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGray"
                    app:layout_constraintTop_toBottomOf="@id/linearLayoutNote"
            />


            <LinearLayout
                    android:id="@+id/linearLayoutFeeling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider3"
            >

                <ImageView
                        android:layout_width="@dimen/imagebutton_size"
                        android:layout_height="@dimen/imagebutton_size"
                        android:layout_margin="@dimen/default_margin"
                        android:src="@drawable/personalrecord"
                        android:tint="@color/colorAccent"
                        android:layout_gravity="center"
                />

                <EditText
                        android:id="@+id/editTextFeeling"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_feeling"
                        android:layout_gravity="center"
                        style="@style/StandardText"
                />

            </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <TextView
                android:id="@+id/textViewError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:visibility="gone"
                tools:text="Loading"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/bottom_sheet_addresult"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            android:layout_margin="@dimen/fab_margin"
            android:backgroundTint="@color/colorAccent"
            app:srcCompat="@drawable/save"
            app:layout_anchor="@id/textViewCaption"
            app:layout_anchorGravity="top|end"
            app:tint="#FFFFFF"/>
    <!--            android:layout_gravity="bottom|end"-->
</androidx.coordinatorlayout.widget.CoordinatorLayout>